implemented features available so far

--- a/client/index.html
+++ b/client/index.html
@@ -2,61 +2,16 @@
 <html lang="en">
 
 <head>
-    <!-- <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <script>
-        const handleResponse = async (response) => {
-            console.log("handling");
-
-            console.log("response.status: " + response.status);
-            //Grab the character-field section
-            const content = document.querySelector('#character-field');
-
-            //Based on the status code, display something
-            switch (response.status) {
-                case 200: //success
-                    content.innerHTML = `<b>Success</b>`;
-                    break;
-                case 201: //created
-                    content.innerHTML = '<b>Created</b>';
-                    break;
-                case 204: //updated (no response back from server)
-                    content.innerHTML = '<b>Updated (No Content)</b>';
-                    return;
-                case 400: //bad request
-                    content.innerHTML = `<b>Bad Request</b>`;
-                    break;
-                default: //any other status code
-                    content.innerHTML = `Error code not implemented by client.`;
-                    break;
-            }
-
-            //Parse the response to json. 
-            let characters = await response.json();
-
-            let names = Object.keys(characters);
-            console.log(names.length);
-
-            for (let name of names) {
-                console.log(name);
-                const character = characters[name];
-                console.log(character.name);
-                console.log(character.job);
-                console.log(character.personality);
-            }
-
-            displayCharacters(characters, names);
-        }
-
+        // used to display all characters in character field
         const displayCharacters = (characters, names) => {
             const characterField = document.querySelector("#character-field");
+            characterField.innerHTML = "";
 
             // create character cards and fill them in with the characters' data
             for (let i = 0; i < names.length; i++) {
@@ -66,13 +21,13 @@
                 div.id = characters[n].name + "-info-card";
                 div.className = "character-card";
 
-                let name = document.createElement("h4");
+                let name = document.createElement("h3");
                 name.innerHTML = "Name: " + characters[n].name;
 
-                let job = document.createElement("h4");
+                let job = document.createElement("h3");
                 job.innerHTML = "Job: " + characters[n].job;
 
-                let personality = document.createElement("h4");
+                let personality = document.createElement("h3");
                 personality.innerHTML = "Personality: " + characters[n].personality;
 
                 div.appendChild(name);
@@ -83,59 +38,142 @@
             }
         }
 
-        const sendFetchRequest = (url, acceptedType) => {
-            //make a GET request, set the 'Accept' header in the headers object            
-            const options = {
-                method: 'GET',
-                headers: {
-                    'Accept': acceptedType
-                },
+
+        // handle response coming back from the server
+        const handleResponse = async (res) => {
+
+            // 200 - send back characters
+            // 201 - created (send back characters)
+            // 204 - updated
+            // 400 - bad request
+            // 404 - not found
+
+            console.log("status: " + res.status);
+
+            // 204 - nothing to parse
+            if (res.status === 204) {
+                // update the character field
+                sendFetchRequest('/getCharacters', 'GET');
+            }
+            // other status - handle the object sent back
+            else {
+                let obj = await res.json(); // parse the response into a json object
+                console.log("obj sent back: ");
+                console.log(obj);
+
+                if (res.status === 400 || res.status === 404) {
+                    // don't update the character field for bad request and not found
+                    let errorMessage = document.createElement('p');
+                    errorMessage.textContent = obj.message;
+                    document.querySelector('#new-character-field').append(errorMessage);
+                }
+                else {
+                    // update the character field when user add/update the character
+                    let names = Object.keys(obj);
+                    console.log("number of characters: " + names.length);
+                    displayCharacters(obj, names);
+                }
+            }
+        }
+
+        // send all requests here
+        const sendFetchRequest = async (url, method) => {
+            console.log("~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~");
+            console.log("method: " + method);
+
+            // clear error message if there is one
+            let p = document.querySelector('p');
+            if (p) {
+                p.parentNode.removeChild(p);
             }
 
-            // fetch response from the server
-            const fetchPromise = fetch(url, options);
-            fetchPromise.then((response) => {
-                handleResponse(response)
-            });
-        };
+            // grab the fields to reference the values in them
+            const nameField = document.querySelector('#nameField');
+            const jobField = document.querySelector('#jobField');
+            const personalityField = document.querySelector('#personalityField');
 
-
-        //Uses fetch to send a postRequest. Marked as async because we use await
-        //within it.
-        const sendPost = async (nameForm) => {
-            //Grab all the info from the form
-            const nameAction = nameForm.getAttribute('action');
-            const nameMethod = nameForm.getAttribute('method');
-
-            const nameField = nameForm.querySelector('#nameField');
-            const jobField = nameForm.querySelector('#jobField');
-            const personalityField = nameForm.querySelector('#personalityField');
-
-            //Build a data string in the FORM-URLENCODED format.
+            // build a data string in the FORM-URLENCODED format.
             const formData = `name=${nameField.value}&job=${jobField.value}&personality=${personalityField.value}`;
 
-            //Make a fetch request and await a response. Set the method to
-            //the one provided by the form (POST). Set the headers. Content-Type
-            //is the type of data we are sending. Accept is the data we would like
-            //in response. Then add our FORM-URLENCODED string as the body of the request.
-            let response = await fetch(nameAction, {
-                method: nameMethod,
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded',
-                    'Accept': 'application/json',
-                },
-                body: formData,
-            });
 
-            //Once we have a response, handle it.
-            handleResponse(response);
-        };
+            // GET request - get characters
+            if (method === "GET") {
+                let response = await fetch(url, {
+                    method,
+                    // send the accept header
+                    headers: {
+                        'Accept': 'application/json',
+                    }
+                });
+                handleResponse(response);
+            }
+
+            // POST request - add, update, delete characters
+            else { // method=== 'POST'
+                let response = await fetch(url, {
+                    method,
+                    // send the accept header
+                    headers: {
+                        'Content-Type': 'application/x-www-form-urlencoded',
+                        'Accept': 'application/json',
+                    },
+                    body: formData
+                });
+                handleResponse(response);
+
+            };
+        }
 
         const init = () => {
-            // grab character data from the server
-            sendFetchRequest('/getCharacters', 'application/json');
+            // display default character at the start up
+            sendFetchRequest('/getCharacters', 'GET');
+
+            // reference the fields and buttons
+            const addButton = document.querySelector('#addButton');
+
+            const nameForm = document.querySelector('#nameForm');
+
+            const nameField = document.querySelector('#nameField');
+            const jobField = document.querySelector('#jobField');
+            const personalityField = document.querySelector('#personalityField');
+
+            const resetButton = document.querySelector('#resetButton');
+
+            // Allow user to add character by pressing Enter
+            // const enterKeyPressed = (e) => {
+            //     if (e.key == "Enter") {
+            //         sendFetchRequest('/addCharacter', 'POST');
+            //     }
+            // }
 
 
+            // cancels the forms default action and calls sendFetchRequest function above.
+            const getCharacters = (e) => {
+                e.preventDefault();
+                sendFetchRequest('/getCharacters', 'GET');
+                return false;
+            }
+
+            const addCharacter = (e) => {
+                e.preventDefault();
+                sendFetchRequest('/addCharacter', 'POST');
+                return false;
+            }
+
+            // make the cursor focus on name field 
+            nameField.focus();
+
+            // user can press enter to Add when they get to the last field
+            // personalityField.addEventListener("keydown", enterKeyPressed);
+
+            // call addCharacter when the submit event fires on the form.
+            nameForm.addEventListener('submit', addCharacter);
+
+            resetButton.addEventListener('click', () => {
+                nameField.value = '';
+                jobField.value = '';
+                personalityField.value = '';
+            });
         }
 
         window.onload = init;
@@ -146,44 +184,61 @@
     <h1>My Character World</h1>
 
     <!-- field for adding new characters -->
-    <section id="top">
-        <h2>Add New Characters</h2>
+    <h2>Add New Characters</h2>
+    <div id="new-character-field">
         <form id="nameForm" action="/addCharacter" method="post">
-            <!-- 3 text fields and 1 submit button -->
+
+            <!-- name field -->
             <label for="name">Name: </label>
             <input id="nameField" type="text" name="name" />
 
+            <!-- job field -->
             <label for="job">Job: </label>
             <input id="jobField" type="text" name="job" />
 
+            <!-- personality field -->
             <label for="personality">Personality: </label>
             <input id="personalityField" type="text" name="personality" />
 
-            <input type="submit" value="Add" />
+            <!-- submit button -->
+            <input type="submit" value="Add" id="addButton" />
+            <input type="button" value="Reset" id="resetButton" />
         </form>
-    </section>
-
-    <!-- temporary field -->
-    <div id="content">
-
     </div>
 
     <!-- field for displaying all characters -->
+    <h2>My Characters</h2>
     <div id="character-field">
-        <h3>My Characters</h3>
         <div class="character-card">
-            <h4>Name: </h4>
-            <h4>Job: </h4>
-            <h4>Personality: </h4>
+            <h3>Name: System</h3>
+            <h3>Job: default system</h3>
+            <h3>Personality: optimistic</h3>
         </div>
-
         <div class="character-card">
-            <h4>Name: </h4>
-            <h4>Job: </h4>
-            <h4>Personality: </h4>
+            <h3>Name: System</h3>
+            <h3>Job: default system</h3>
+            <h3>Personality: optimistic</h3>
         </div>
-
-
+        <div class="character-card">
+            <h3>Name: System</h3>
+            <h3>Job: default system</h3>
+            <h3>Personality: optimistic</h3>
+        </div>
+        <div class="character-card">
+            <h3>Name: System</h3>
+            <h3>Job: default system</h3>
+            <h3>Personality: optimistic</h3>
+        </div>
+        <div class="character-card">
+            <h3>Name: System</h3>
+            <h3>Job: default system</h3>
+            <h3>Personality: optimistic</h3>
+        </div>
+        <div class="character-card">
+            <h3>Name: System</h3>
+            <h3>Job: default system</h3>
+            <h3>Personality: optimistic</h3>
+        </div>
     </div>
 </body>
 
